# website

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.json  .stylelintrc.json  401.html  404.html  CNAME  LICENSE  README.md  babel.config.json  contact_me.php  credits  index.html  package-lock.json  package.json  pyproject.toml  robots.txt  style.css  tsconfig.json  webpack.config.js  webpack.config.ts
.github/workflows/: pages.yaml
archived/: CNAME  index.html  package.json
codefest/: index.html  style.css
contest/: index.html
css/: agency.css  agency.min.css  skillset.css
data/: contacts.json  experiences.json  pictures.ts  presentations.json
gallery/: index.html
gituhb/: index.html
hackstoga/: index.html
js/: jquery.nicescroll.js  jquery.slitslider.js  main.js  scrollupto.js
leaderboard/: index.html  login.html  logout.html  manage.html  trading.html
leadership/: 2013.html  2014.html  2015.html  2016.html  2017.html  2019.html  2020.html  2021.html  2022.html  2023.html  2024.html  2025.html  2026.html
login/: index.html
presentations/: index.html
resources/: index.html
scripts/: fontawesome.js  index.js  leaderboard.js  main.js  navbar-close.js  navbar.js  presentations.js  trading.js  utils.js
src/: 404.html  index.html  index.tsx  robots.txt
src/404/: index.html
style/: animations.css  definitions.css  gallery.css  hackstoga.css  hackstoga_schedule.css  hackstoga_sponsor.css  index.css  leaderboard.css  login.css  main.css  navbar.css  resources.css  store.css  theme.css  tooltips.css
web-maker/: index.html
(+119 files in other folders)
