[tool.poetry]
name = "stogacs.club"
version = "0.1.0"
description = ""
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mstatquery = { git = "https://github.com/Dophin2009/mstatquery.git" }
transcrypt = "^3.7.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
